--- a/IMDB Video Games Dive Deep using SQL.ipynb
+++ b/IMDB Video Games Dive Deep using SQL.ipynb
@@ -199,7 +199,7 @@
     }
    ],
    "source": [
-    "df= pd.read_csv('C:\\\\Users\\\\subal\\\\OneDrive\\\\Desktop\\\\Documents\\\\Project\\\\sql\\\\IMDB Video Games Dive Deep using SQL\\\\imdb-videogames.csv')\n",
+    "df= pd.read_csv('C:\\\\Users\\\\s####\\\\OneDrive\\\\Desktop\\\\Documents\\\\Project\\\\sql\\\\IMDB Video Games Dive Deep using SQL\\\\imdb-videogames.csv')\n",
     "\n",
     "df.head()"
    ]
@@ -5285,12 +5285,12 @@
      "text": [
       "Collecting textblob\n",
       "  Downloading textblob-0.18.0.post0-py3-none-any.whl.metadata (4.5 kB)\n",
-      "Requirement already satisfied: nltk>=3.8 in c:\\users\\subal\\anaconda3\\lib\\site-packages (from textblob) (3.8.1)\n",
-      "Requirement already satisfied: click in c:\\users\\subal\\anaconda3\\lib\\site-packages (from nltk>=3.8->textblob) (8.1.7)\n",
-      "Requirement already satisfied: joblib in c:\\users\\subal\\anaconda3\\lib\\site-packages (from nltk>=3.8->textblob) (1.2.0)\n",
-      "Requirement already satisfied: regex>=2021.8.3 in c:\\users\\subal\\anaconda3\\lib\\site-packages (from nltk>=3.8->textblob) (2023.10.3)\n",
-      "Requirement already satisfied: tqdm in c:\\users\\subal\\anaconda3\\lib\\site-packages (from nltk>=3.8->textblob) (4.65.0)\n",
-      "Requirement already satisfied: colorama in c:\\users\\subal\\anaconda3\\lib\\site-packages (from click->nltk>=3.8->textblob) (0.4.6)\n",
+      "Requirement already satisfied: nltk>=3.8 in c:\\users\\s####\\anaconda3\\lib\\site-packages (from textblob) (3.8.1)\n",
+      "Requirement already satisfied: click in c:\\users\\s####\\anaconda3\\lib\\site-packages (from nltk>=3.8->textblob) (8.1.7)\n",
+      "Requirement already satisfied: joblib in c:\\users\\s####\\anaconda3\\lib\\site-packages (from nltk>=3.8->textblob) (1.2.0)\n",
+      "Requirement already satisfied: regex>=2021.8.3 in c:\\users\\s####\\anaconda3\\lib\\site-packages (from nltk>=3.8->textblob) (2023.10.3)\n",
+      "Requirement already satisfied: tqdm in c:\\users\\s####\\anaconda3\\lib\\site-packages (from nltk>=3.8->textblob) (4.65.0)\n",
+      "Requirement already satisfied: colorama in c:\\users\\s####\\anaconda3\\lib\\site-packages (from click->nltk>=3.8->textblob) (0.4.6)\n",
       "Downloading textblob-0.18.0.post0-py3-none-any.whl (626 kB)\n",
       "   ---------------------------------------- 0.0/626.3 kB ? eta -:--:--\n",
       "   ---------------------------------------- 0.0/626.3 kB ? eta -:--:--\n",
